# LibMultiUsers

./: CMakeLists.txt
include/: multiusers.h
src/: authenticate.c  multiusers.c  multiusers_safe.c
tests/: CMakeLists.txt  check_authenticate.c  check_become_user.c  check_current_user.c  check_user_exists.c  check_user_exists_safe.c  user.c  user_safe.c
